# trito

./: README.md  pyproject.toml  requirements.txt
trito/: auth.yml  main.py
