[tool.poetry]
name = "trito"
version = "0.1.0"
description = ""
authors = ["Ronie Uliana <ronie.uliana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.22.0"
langchain = "^0.0.171"
openai = "^0.27.6"
wikipedia = "^1.4.0"
tiktoken = "^0.4.0"
chromadb = "^0.3.23"
streamlit-chat = "^0.0.2.2"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
